board/cryocon/common/rootfs_overlay/etc/network/iptables.rules
*mangle
:PREROUTING ACCEPT [552:28372]
:INPUT ACCEPT [552:28372]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [164:16992]
:POSTROUTING ACCEPT [164:16992]
COMMIT
*filter
:INPUT DROP [14:1092]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [60:7104]
-A INPUT -p udp -m udp --sport 255:65535 --dport 44444 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 255:65535 --dport 44444 -j ACCEPT
-A INPUT -p udp -m udp --sport 255:65535 --dport 111 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 255:65535 --dport 111 -j ACCEPT
-A INPUT -p udp -m udp --sport 255:65535 --dport 123 -j ACCEPT
-A INPUT -p udp -m udp --sport 255:65535 --dport 4111 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 255:65535 --dport 4112 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 255:65535 --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 255:65535 --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 255:65535 --dport 502 -j ACCEPT
-A INPUT -p udp -m udp --sport 255:65535 --dport 5001 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 255:65535 --dport 5000 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
# debugging entries
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2345 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5064 -j ACCEPT
-A INPUT -p udp -m udp --dport 5064 -j ACCEPT
COMMIT
